Change path for barista image
The path for barista image was incorrect as using ../ in index.html would not lead
to the correct directory. Revised to ./ so it begins from same directory as
index.html and can correctly search for images/

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <h1>Drink Recipes</h1>
-  <img src="../images/barista.jpg" alt="A barista holding a cup of coffee">
+  <img src="./images/barista.jpg" alt="A barista holding a cup of coffee">
   <p>A compilation of my favorite drink recipes</p>
   <p>Better than water...!</p>
 
