Fill content of thai-tea.html
Added headings, an image, and paragraphs explaining the history of thai tea. The description was taken from a
recipe website. An unordered list was used to list ingredients while a ordered list was used to list steps
that are necessary to prepare the drink

--- a/pages/thai-tea.html
+++ b/pages/thai-tea.html
@@ -5,7 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thai Tea Recipe</title>
 </head>
+
 <body>
+  <h1>Thai Tea Recipe</h1>
+  <img src="https://whiteonricecouple.com/recipe/images/thai-iced-tea-recipe-2.jpg"
+       alt="A cup of thai tea with milk being poured into it">
   
+  <h3>Thai Tea in Restaurants</h3>
+  <p>
+    During one of the conference days in Chicago, we escaped out to lunch at a 
+    local Thai restaurant to explore more of the city’s culinary offerings. As 
+    always, we’ll try to order something new and different. When we’re at a 
+    Thai restaurant, it normally involves ordering our favorites. This includes 
+    a curry dish,  one noodle dish and an appetizer. On top of that, we must 
+    always have Thai iced tea. Because how can we NOT have Thai iced tea when 
+    we eat Thai food? It’s one of those decant “dessert” drinks that helps 
+    soothe the burn when we overload on too much of Thai spice.
+  </p>
+
+  <h3>Authentic Thai Tea Recipe</h3>
+  <p>
+    Years ago, my Auntie Chung was telling me how easy it was to make Thai iced 
+    tea. She had worked in an Asian restaurant and one of the most popular 
+    items on the entire menu was Thai iced tea. She proceeded to tell me 
+    exactly how to make it and how profitable it was for restaurants to make. 
+    I didn’t care too much about the profitability of Thai iced tea. But 
+    rather, I’m more interested on how easily it was made and why we didn’t 
+    make it more often. The version we have is as authentic as what most Thai 
+    restaurants in America are making. Our version really does taste like what 
+    we have ordered at most Thai restaurants.
+  </p>
+
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 cup (80g) 
+      <a href="https://amzn.to/3DQDyRi" 
+         target="_blank" 
+         rel="noopener noreferrer">
+         Thai Tea Mix
+      </a>
+    </li>
+    <li>4 cups (960 ml) water</li>
+    <li>3/4 cup (150g) granulated sugar</li>
+    <li>3/4 cup (240ml) half and half 
+        <em>
+          approximately, (some folks also use coconut milk, whole milk,
+          sweetened condensed milk)
+        </em>
+    </li>
+  </ul>
+
+  <ol>
+    <li>
+      Bring water to boil and add the thai tea mix. Add sugar and gently stir 
+      to completely dissolve sugar. Gently boil tea for about 3 minutes. Remove 
+      from heat.
+    </li>
+    <li>
+      Allow tea to steep for at least 30 minutes and allow it to cool. The more 
+      concentrated the tea flavor, the better the Thai tea tastes.
+    </li>
+    <li>
+      If you are using the Thai tea mix, strain the tea leaves (we love using 
+      these 
+      <a href="https://amzn.to/2SouFM8"
+         target="_blank" cloth filters
+         rel="noopener noreferrer">
+         reusable cloth filters 
+        </a>
+      ). Set finished Thai tea aside to cool. You 
+      can make this ahead of time and have the Thai tea chilling in the fridge. 
+      We usually like to make this tea mix one day ahead.
+    </li>
+    <li>
+      Fill glasses with ice and pour in Thai tea leaving enough room to fill in 
+      your half and half (or other creamer). For an 8 oz. glass we like to add 
+      about 2-3 tablespoons of half and half for a creamier flavor.
+    </li>
+  </ol>
 </body>
 </html>
