Fill horchata recipe page with information

--- a/pages/horchata.html
+++ b/pages/horchata.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Horchata Recipe</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Horchata Recipe</title>
+  </head>
 
-<body>
-  
-</body>
+  <body>
+    <h1>Traditional Mexican Horchata</h1>
+    <p>
+      <strong>Horchata</strong> de Arroz is a popular & refreshing Mexican drink made with ground 
+      rice, milk and cinnamon. Learn how to make this delicious drink with these 
+      step by step instructions! 
+    </p>
+
+    <img src="../images/horchata.jpg" alt="Horchata in a glass.">
+
+    <p>
+      My recipe is for traditional Mexican horchata but I’ve seen versions around 
+      the web to fit today’s different diet needs: Some use almond or coconut 
+      milk to make it lactose-free or they use no calorie-sweeteners for 
+      diabetic needs. 
+    </p>
+
+    <p>
+      While they may taste good, nothing beats the taste of the traditional 
+      version! <strong>It’s creamy, flavorful and so refreshing.</strong> I hope
+      you treat yourself to the real deal at least once in a while.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 cup of white rice</li>
+      <li>
+        1 cup sugar <em>adjust depending on how sweet you want - 2/3 cup of sugar
+        if you want it less sweet.</em>
+      </li>
+      <li>1/2 cup chopped almonds</li>
+      <li>1 cinnamon stick</li>
+      <li>1 Tbsp vanilla</li>
+      <li>1 Can <em>12 ounces Evaporated milk</em></li>
+      <li>1.5 cups of milk or almond milk</li>
+      <li>1 Liter of water</li>
+      <li>Ice</li>
+    </ul>
+
+    <h2>Instructions</h2>
+    <ol>
+      <li>
+        Start by soaking the rice, cinnamon, and almonds in a bowl of water 
+        all night, or at least for 5 hours so that the rice softens slightly.
+      </li>
+      <li>
+        Strain the water from the cinnamon, rice, and almond mixture that were 
+        soaking, disposing of water.
+      </li>
+      <li>
+        Blend the cinnamon, rice, and almond mixture with evaporated milk until 
+        a smoother mix is formed and the grains of rice are completely ground.
+      </li>
+      <li>
+        Strain the resulting liquid into a pitcher, and add the sugar, vanilla, 
+        and milk. Mix well until everything is well combined.Add a liter of 
+        water, and serve with ice. Enjoy!
+      </li>
+    </ol>
+  </body>
 </html>
